Started on the body components

--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@
        <title>Emily Matoke</title> 
        <link rel="stylesheet" href="style.css"/>
     </head>
+    <body>
+        <header>
+            <h1>Emily Matoke</h1>
+            <p>Software Engineer| Accountant| Data-Driven Innovator</p>
+        </header>
+    </body>
 </html>
