--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <header>
             <h1>Emily Matoke</h1>
             <p>Software Engineer| Accountant| Data-Driven Innovator</p>
+            <img src="emily.jpg" alt="Emily Matoke" class="profile-pic"/>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#experience">Experience</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="#contacts">Contacts</a>
+            </nav>
         </header>
     </body>
 </html>
