Started on the aboiut section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
                 <a href="#contacts">Contacts</a>
             </nav>
         </header>
+        <!--About Section-->
+        <section id="about">
+            <h2>About Me</h2>
+            <div class="about-container">
+                <img src="emily-working.jpg" alt="Emily working" class="about-img"/>
+            </div>
+        </section>
     </body>
 </html>
