Finished on the about section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <section id="about">
             <h2>About Me</h2>
             <div class="about-container">
-                <img src="emily-working.jpg" alt="Emily working" class="about-img"/>
+                <img src="emily-working.jpg" alt="Emily Matoke at work" class="about-img"/>
+                <p>
+                    Hi! I'm Emily Matoke — a Software Engineer and Certified Accountant with a passion for crafting data-driven solutions.
+                    I thrive at the intersection of technology, finance, and innovation. I love turning complex problems into elegant solutions
+                    through code and collaboration.
+                </p>
             </div>
         </section>
     </body>
