Started on the Experience section

--- a/index.html
+++ b/index.html
@@ -31,5 +31,24 @@
                 </p>
             </div>
         </section>
+        <!--Experience Section-->
+        <section id="experience">
+            <h2>Experience</h2>
+            <ul>
+                <li>
+                    <strong>IT-Oracle Database Systems</strong><br/>
+                    POSTBANK Kenya <br/>
+                    <em>Managing high-performance Oracle databases, implementing backup/recovery strategies, and supporting digital transformation efforts.</em>
+                </li>
+                <li>
+                    <strong>Team Leader-Software Consultancy</strong><br/>
+                    E-elimu ERP Systems<br/>
+                    <em>Leading ERP software implementation, managing a development team, and aligning tech solutions with client needs.</em>
+                </li>
+                <li>
+                    <strong></strong>
+                </li>
+            </ul>
+        </section>
     </body>
 </html>
