Added more experience components

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
                     <em>Leading ERP software implementation, managing a development team, and aligning tech solutions with client needs.</em>
                 </li>
                 <li>
-                    <strong></strong>
+                    <strong>Information Technology Officer</strong><br/>
+                    Civil Registration Services(Ministry of Interior)<br/>
+                    <em>Optimized digital registration systems and contributed to new digital workflows in government offices.</em>
+                </li>
+                <li>
+                    <strong>Adminstrative Intern</strong><br/>
+                    United Nations Office at Nairobi<br/>
+                    <em>Supported cross-departmental project logistics, scheduling, and UN-aligned documentation processes.</em>
                 </li>
             </ul>
         </section>
