Completed the experience section.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                     United Nations Office at Nairobi<br/>
                     <em>Supported cross-departmental project logistics, scheduling, and UN-aligned documentation processes.</em>
                 </li>
+                <li>
+                    <strong>Freelance Software Developer</strong><br/>
+                    Upwork / Software Planet Group<br/>
+                    <em>Delivered remote software development and administrative support to international clients under tight deadlines.</em>
+                </li>
             </ul>
         </section>
     </body>
