Started on the skills section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,12 @@
                 </li>
             </ul>
         </section>
+        <!--Skills section-->
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li></li>
+            </ul>
+        </section>
     </body>
 </html>
