Added programming and tools to the skills section

--- a/index.html
+++ b/index.html
@@ -65,9 +65,18 @@
         <!--Skills section-->
         <section id="skills">
             <h2>Skills</h2>
-            <ul>
-                <li></li>
-            </ul>
+            <div class="Skills-grid">
+                <div class="Skills-group">
+                    <h3>Programming and Tools</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>SQL</li>
+                        <li>HTML&CSS</li>
+                        <li>R</li>
+                        <li>SPSS</li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </body>
 </html>
