Added Database management skills

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                         <li>SPSS</li>
                     </ul>
                 </div>
+                <div class="Skills-group">
+                    <h3>Database Management</h3>
+                    <ul>
+                        <li>Oracle</li>
+                        <li>mySQL</li>
+                    </ul>
+                </div>
+                
             </div>
         </section>
     </body>
