Addded analytics and reporting skills

--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
                         <li>mySQL</li>
                     </ul>
                 </div>
-                
+              <div class="Skills-group">
+                <h3>Analytics and Reporting</h3>
+                <ul>
+                    <li>Advanced Excel</li>
+                    <li>Google Workplace</li>
+                    <li>Microsoft Office Suite</li>
+                </ul>
+              </div>  
             </div>
         </section>
     </body>
