Finished on the skills section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
                     <li>Microsoft Office Suite</li>
                 </ul>
               </div>  
+              <div class="Skills-group">
+                <h3>Soft Skills</h3>
+                <ul>
+                    <li>Problems solving</li>
+                    <li>Project management</li>
+                    <li>Communication</li>
+                    <li>Team Leadership</li>
+                </ul>
+              </div>
             </div>
         </section>
     </body>
