Made minor changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <em>Optimized digital registration systems and contributed to new digital workflows in government offices.</em>
                 </li>
                 <li>
-                    <strong>Adminstrative Intern</strong><br/>
+                    <strong>Administrative Intern</strong><br/>
                     United Nations Office at Nairobi<br/>
                     <em>Supported cross-departmental project logistics, scheduling, and UN-aligned documentation processes.</em>
                 </li>
@@ -59,6 +59,11 @@
                     <strong>Freelance Software Developer</strong><br/>
                     Upwork / Software Planet Group<br/>
                     <em>Delivered remote software development and administrative support to international clients under tight deadlines.</em>
+                </li>
+                <li>
+                    <strong>Volunteer STEM teacher</strong><br/>
+                    Thomas Aquinas Girls Secondary School<br/>
+                    <em>Taught Mathematics, Physics, and Computer Studies; mentored girls in STEM careers.</em>
                 </li>
             </ul>
         </section>
@@ -80,7 +85,7 @@
                     <h3>Database Management</h3>
                     <ul>
                         <li>Oracle</li>
-                        <li>mySQL</li>
+                        <li>MySQL</li>
                     </ul>
                 </div>
               <div class="Skills-group">
@@ -94,7 +99,7 @@
               <div class="Skills-group">
                 <h3>Soft Skills</h3>
                 <ul>
-                    <li>Problems solving</li>
+                    <li>Problem solving</li>
                     <li>Project management</li>
                     <li>Communication</li>
                     <li>Team Leadership</li>
