--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="#contacts">Contacts</a>
             </nav>
         </header>
+        <main>
         <!--About Section-->
         <section id="about">
             <h2>About Me</h2>
@@ -107,5 +108,6 @@
               </div>
             </div>
         </section>
+        </main>
     </body>
 </html>
