--- a/index.html
+++ b/index.html
@@ -109,5 +109,8 @@
             </div>
         </section>
         </main>
+        <footer>
+            <p>&copy; 2025 Emily Matoke | All rights reserved</p>
+        </footer>
     </body>
 </html>
