--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
               </div>
             </div>
         </section>
+        <!--Contact section-->
+        <section id="contacts">
+            <h2>Contacts</h2>
+            <p>Email: <a href="mailto:emilymomata@gmail.com">emilymomata@gmail.com</a></p>
+            <p>Phone: 0740720007</p>
+            <p>Linkedin: <a href="https://www.linkedin.com/in/emily-momata/" target="_blank">linkedin.com/in/emily-momata/</a></p>
+        </section>
         </main>
         <footer>
             <p>&copy; 2025 Emily Matoke | All rights reserved</p>
